@@ -10,6 +10,4 @@ TODO
 - Add some extra fallbacks for often-used packages like PIL (which is really
   Imaging when you import it).
 
-- Optionally check imports inside doctests.
-
 
